--- a/src/app/component/component-two/component-two.component.html
+++ b/src/app/component/component-two/component-two.component.html
@@ -1,1 +1,1 @@
-<a class="btn btn-primary" (click)="increaseCounter()">Increase Counter *</a>
+<a class="btn btn-primary" (click)="increaseCounter()">Increase Count *</a>
